force-app/main/default/objects/Service_Request__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Change Credit Limit</fullName>
            </value>
            <value>
                <fullName>Update Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>